fix contrast on visited link

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -13,6 +13,10 @@ footer {
 }
 #logo {
   text-align: center;
+ 
+}
+#logo a:visited{
+  
   color: rgb(180, 220, 255);
 }
 header {
